# lunch-money-utilities

./: .gitattributes  .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md  rustfmt.toml
.agents/: .gitignore
.agents/skills/lunchmoney-api/: SKILL.md
.agents/skills/lunchmoney-api/resources/: api-1.json  api-1.yaml
.agents/skills/splitwise-api/: SKILL.md
.github/workflows/: release.yml
ci/: build.sh
lm_backup/: Cargo.toml  README.md
lm_backup/src/: backup.rs  cli.rs  lib.rs  raw_client.rs
lm_common/: Cargo.toml
lm_common/src/: cli.rs  init.rs  lib.rs  lm_client.rs  term.rs  tool.rs
lm_common/src/config/: editor.rs  loader.rs  mod.rs
lm_payslip_importer/: Cargo.toml  PAYROLL_NOTES.md  README.md
lm_payslip_importer/src/: cli.rs  config.rs  lib.rs  main.rs  payslip.rs
lm_payslip_importer/src/commands/: import.rs  init.rs  mod.rs
lm_payslip_importer/src/payslip/: adp_microsoft.rs  microsoft.rs  mod.rs  workday.rs
lm_query/: Cargo.toml  README.md
lm_query/src/: cli.rs  lib.rs
lm_query/src/commands/: mod.rs
lm_splitwise_sync/: Cargo.toml  GEMINI.md  README.md
lm_splitwise_sync/src/: cli.rs  config.rs  lib.rs  main.rs  metadata.rs
lm_splitwise_sync/src/api/: lunch_money.rs  splitwise.rs  types.rs
lm_splitwise_sync/src/commands/: init.rs  migrate.rs  mod.rs  query.rs  sync_balances.rs
lm_splitwise_sync/src/commands/sync/: diff.rs  execute.rs  mod.rs  report.rs
lm_utils/: Cargo.toml
lm_utils/src/: main.rs
lm_venmo_balfixer/: Cargo.toml  README.md
lm_venmo_balfixer/src/: cli.rs  config.rs  lib.rs  main.rs
lm_venmo_balfixer/src/commands/: init.rs  mod.rs  reconcile.rs
lm_venmo_plaidfix/: Cargo.toml  README.md
lm_venmo_plaidfix/src/: cli.rs  config.rs  lib.rs
lm_venmo_plaidfix/src/commands/: init.rs  mod.rs  payee.rs  reconcile.rs
lunch_money/: Cargo.toml
lunch_money/src/: budgets.rs  categories.rs  client.rs  lib.rs  manual_accounts.rs  plaid_accounts.rs  recurring_items.rs  schema.rs  tags.rs  transactions.rs  users.rs
lunch_money/src/core/: currency.rs  ids.rs  mod.rs
splitwise_lunchmoney/: Cargo.toml  GEMINI.md  README.md
splitwise_lunchmoney/src/: cli.rs
splitwise_lunchmoney/src/api/: lunch_money.rs  mod.rs  splitwise.rs
splitwise_lunchmoney/src/commands/: init.rs  migrate.rs  query.rs
splitwise_lunchmoney/src/commands/sync/: execute.rs  mod.rs
src/: cli.rs  config.rs  main.rs  metadata.rs  style.rs
src/api/: lunch_money.rs  mod.rs  splitwise.rs  types.rs
src/commands/: init.rs  migrate.rs  mod.rs  query.rs  sync.rs  sync_balances.rs
src/commands/sync/: diff.rs  execute.rs  mod.rs  report.rs
