[workspace]
resolver = "3"
members = [
    "lunch_money",
    "splitwise_lunchmoney",
]
default-members = [
    "splitwise_lunchmoney",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
lunch_money = { path = "lunch_money" }

# Shared third-party dependencies. Member crates opt in via
# `dep.workspace = true` and may refine features locally.
anstream = "1.0"
anstyle = "1.0"
anyhow = "1.0"
bon = "3"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
humantime = "2.1"
inquire = "0.9"
jiff = { version = "0.2", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls-no-provider", "http2"] }
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = { version = "0.21.0", features = ["ansi"] }
tokio = { version = "1", features = ["rt", "macros"] }
toml = "1.1"

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -2 }
rust_2018_idioms = { level = "warn", priority = -2 }
unused_qualifications = "warn"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(trick_rust_analyzer_into_highlighting_interpolated_bits)',
] }

[workspace.lints.clippy]
allow_attributes = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
suboptimal_flops = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_box_returns = "warn"
collapsible_else_if = "allow"
collapsible_if = "allow"
len_without_is_empty = "allow"
new_without_default = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
manual_flatten = "allow"
bool_assert_comparison = "allow"
box_default = "allow"
single_range_in_vec_init = "allow"
uninlined_format_args = "allow"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
