[package]
name = "lm-backup"
version.workspace = true
edition.workspace = true

[dependencies]
lm-common.workspace = true

anstream.workspace = true
anyhow.workspace = true
clap.workspace = true
jiff.workspace = true
reqwest = { workspace = true, features = ["rustls-no-provider"] }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
