[package]
name = "lm-common"
version.workspace = true
edition.workspace = true

[dependencies]
lunch_money = { workspace = true, features = ["client"] }

anstream.workspace = true
anstyle.workspace = true
anyhow.workspace = true
clap.workspace = true
humantime.workspace = true
inquire.workspace = true
reqwest.workspace = true
serde.workspace = true
toml_edit.workspace = true

[lints]
workspace = true
