[package]
name = "lm-payslip-importer"
version.workspace = true
edition.workspace = true

[dependencies]
anstream.workspace = true
anstyle.workspace = true
anyhow.workspace = true
bon.workspace = true
clap.workspace = true
csv.workspace = true
inquire.workspace = true
jiff.workspace = true
lunch_money = { workspace = true, features = ["client"] }
regex.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
pdf-extract = "0.10.0"

[lints]
workspace = true
