[package]
name = "lm-payslip-importer"
version.workspace = true
edition.workspace = true

[dependencies]
lunch_money = { workspace = true, features = ["client"] }
lm-common.workspace = true

anstream.workspace = true
anyhow.workspace = true
clap.workspace = true
inquire.workspace = true
jiff.workspace = true
pdf-extract.workspace = true
regex.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true

[lints]
workspace = true
