[package]
name = "lm-query"
version.workspace = true
edition.workspace = true

[dependencies]
lunch_money = { workspace = true, features = ["client"] }
lm-common.workspace = true

anstream.workspace = true
anyhow.workspace = true
clap.workspace = true
rust_decimal.workspace = true
serde.workspace = true
tabled.workspace = true

[lints]
workspace = true
