[package]
name = "lm-splitwise-sync"
version.workspace = true
edition.workspace = true

[dependencies]
lunch_money = { workspace = true, features = ["client"] }
lm-common.workspace = true

anstream.workspace = true
anyhow.workspace = true
bon.workspace = true
clap.workspace = true
csv.workspace = true
humantime.workspace = true
inquire.workspace = true
jiff.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled.workspace = true
toml.workspace = true

[lints]
workspace = true
