[package]
name = "lm-utils"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lm-utils"
path = "src/main.rs"

[dependencies]
lm-common.workspace = true
lm-payslip-importer.workspace = true
lm-backup.workspace = true
lm-query.workspace = true
lm-splitwise-sync.workspace = true
lm-venmo-plaidfix.workspace = true

anstream.workspace = true
anyhow.workspace = true
clap.workspace = true
rustls.workspace = true
tokio.workspace = true
toml_edit.workspace = true

[lints]
workspace = true
