[package]
name = "lm-venmo-balfixer"
version.workspace = true
edition.workspace = true

[dependencies]
lunch_money = { workspace = true, features = ["client"] }

anstream.workspace = true
anstyle.workspace = true
anyhow.workspace = true
bon.workspace = true
clap.workspace = true
humantime.workspace = true
inquire.workspace = true
jiff.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
rustls.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true

[lints]
workspace = true
