[package]
name = "lunch_money"
version.workspace = true
edition.workspace = true

[features]
default = []
client = ["dep:anyhow", "dep:reqwest", "dep:tokio"]

[dependencies]
anyhow = { workspace = true, optional = true }
bon.workspace = true
jiff.workspace = true
# Refines the shared reqwest with `multipart`, required by the client.
reqwest = { workspace = true, optional = true, features = ["multipart"] }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, optional = true, features = ["time"] }

[lints]
workspace = true

