[package]
name = "splitwise-lunchmoney"
version.workspace = true
edition.workspace = true

[dependencies]
anstream.workspace = true
anstyle.workspace = true
anyhow.workspace = true
bon.workspace = true
clap.workspace = true
csv.workspace = true
humantime.workspace = true
inquire.workspace = true
jiff.workspace = true
lunch_money = { workspace = true, features = ["client"] }
reqwest.workspace = true
rust_decimal.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled.workspace = true
tokio.workspace = true
toml.workspace = true

[lints]
workspace = true
